--- a/styles.css
+++ b/styles.css
@@ -13,31 +13,59 @@ body {
 .wrapper {
   padding: 2rem;
   height: 800px;
-  max-width: 1200px;
+  width: 1200px;
 }
 .slider-wrapper {
   height: 100%;
+  width: 100%;
   position: relative;
 }
 
 .slider {
-  display: flex;
   height: 100%;
+  width: 100%;
   border-radius: 0.5rem;
   position: relative;
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
   box-shadow: 0 1.5rem 3rem -0.75rem rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 img {
-  flex: 1 0 100%;
-  scroll-snap-align: start;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  opacity: 0;
+  transition: opacity ease 0.3s;
+  z-index: 1;
+}
+img:hover{
+  opacity: 0
 }
 
-.controls {
+img.active {
+  opacity: 1;
+}
+
+.controls .prev,
+.controls .next {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  cursor: pointer;
+  font-size: 3rem;
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+.controls .prev {
+  left: -4rem;
+}
+.controls .next {
+  right: -4rem;
+}
+
+.controls .dots {
   display: flex;
   gap: 1rem;
   position: absolute;
@@ -46,19 +74,102 @@ img {
   transform: translate(-50%, 0);
   bottom: 30px;
 }
-.slider::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
-}
 
 .dot {
   width: 0.5rem;
   height: 0.5rem;
   border-radius: 50%;
   background-color: #fff;
-  opacity: 0.75;
+  opacity: 0.5;
   transition: opacity ease 0.3s;
   cursor: pointer;
 }
 .dot:hover {
   opacity: 1;
+}
+
+.dot.active {
+  opacity: 1;
+}
+
+@media screen and (max-width: 1480px) {
+  .wrapper {
+    width: 1000px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .wrapper {
+    width: 800px;
+  }
+}
+
+@media screen and (max-width: 1080px) {
+  .wrapper {
+    width: 700px;
+    height: 700px;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  .wrapper {
+    width: 600px;
+    height: 600px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .wrapper {
+    width: 500px;
+    height: 500px;
+  }
+
+  .controls .prev,
+  .controls .next {
+    font-size: 3rem;
+  }
+
+  .controls .prev {
+    left: -2.5rem;
+  }
+
+  .controls .next {
+    right: -2.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .wrapper {
+    width: 400px;
+    height: 400px;
+  }
+  .controls .prev,
+  .controls .next {
+    top: initial;
+    bottom: -6rem;
+  }
+  .controls .prev {
+    left: 5rem;
+  }
+  .controls .next {
+    right: 5rem;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .wrapper {
+    width: 300px;
+    height: 300px;
+  }
+  .controls .prev,
+  .controls .next {
+    font-size: 2rem;
+    bottom: -5rem;
+  }
+  .controls .prev {
+    left: 4rem;
+  }
+  .controls .next {
+    right: 4rem;
+  }
 }
